@startuml

entity "loai_hinh_tai_nang" as loai_hinh_tai_nang {
	* ma_loai_hinh_tai_nang
	+ ten_loai_hinh
	+ so_thi_sinh_dang_ky_tham_gia
}

entity "huan_luyen_vien" as huan_luyen_vien {
	* ma_huan_luyen_vien
	+ ho_ten
	+ gioi_tinh
	+ so_dien_thoai
}

entity "thi_sinh" as thi_sinh {
	* ma_so_du_thi
	+ ho_ten
	+ gioi_tinh
	+ ngay_sinh
	+ dia_chi
}

entity "duoc_dang_ky" as duoc_dang_ky {
}

huan_luyen_vien |o--|{ thi_sinh

thi_sinh |o--|{ thi_sinh

loai_hinh_tai_nang |o--|{ duoc_dang_ky

thi_sinh |o--|{ duoc_dang_ky

@enduml